# apdev

./: .gitignore  Makefile  README.md
docs/plans/: 2026-02-23-custom-charsets-design.md  2026-02-23-custom-charsets-impl.md  apdev-python-package.md
python/: .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
python/src/apdev/: __init__.py  __main__.py  check_chars.py  check_imports.py  cli.py  config.py  release.sh
python/tests/: test_check_chars.py  test_check_imports.py  test_cli.py  test_config.py
rust/: CHANGELOG.md  Cargo.toml  README.md  release.sh
rust/src/: check_chars.rs  check_imports.rs  cli.rs  config.rs  main.rs
rust/src/charsets/: base.json
shared/charsets/: chinese.json  korean.json
typescript/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  release.sh  tsup.config.ts
typescript/src/: check-chars.ts  check-imports.ts  cli.ts  config.ts  index.ts
typescript/src/charsets/: japanese.json
typescript/tests/: check-chars.test.ts  check-imports.test.ts  cli.test.ts  config.test.ts
