[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apdev"
version = "0.2.1"
description = "General-purpose development tools for Python - character validation, circular import detection, and more"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "aipartnerup", email = "tercel.yi@gmail.com"}
]
keywords = [
    "development-tools",
    "quality-assurance",
    "linting",
    "static-analysis",
    "character-validation",
    "circular-imports",
    "release-automation",
    "unicode-checker",
    "trojan-source-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tomli>=1.1.0;python_version<'3.11'",
    "build>=1.0",
]

[project.scripts]
apdev = "apdev.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apdev = ["release.sh", "charsets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[project.urls]
Homepage = "https://aipartnerup.com"
Documentation = "https://github.com/aipartnerup/apdev"
Repository = "https://github.com/aipartnerup/apdev"
Issues = "https://github.com/aipartnerup/apdev/issues"
